Changes for 1.5:

 - added availability to show negative values in graphs (Artem) 
 - developed database monitoring via ODBC (Eugene)
 - added availability to export/import templates for hosts (Artem)
 - changed how is showed messages (Artem)
 - added login/logout (Artem)

Changes for 1.4.2:

 - fixed processing of macro {TRIGGER.VALUE} on 32 bit systems (Alexei)
 - changed priorities of '|' and '&' in trigger expressions (Alexei)
 - fixed no graphs for PostgreSQL (Eugene)
 - fixed and improved eventlog monitoring (Eugene)
 - improved not supported values processing (Eugene)
 - fixed processing of user parameters and remote commands having character '%' (Alexei)

Changes for 1.4.1:

 - fixed processing of 'service_state[*]' (Eugene)
 - fixed PostgreSQL database upgrade script (Alexei)
 - adde support of non standard PostgreSQL & MySQL ports (Eugene)
 - fixed compilation of ZABBIX server under HP-UX (Alexei)
 - fixed upgrade of maps without backgrounds (Alexei)
 - improved UserParameters for Win32 (Eugene)
 - fixed location of the manual and added link to support (Alexei)
 - check timeouted item only after 4*delay seconds (Alexei)
 - improved UserParameters for Win32 (Eugene)
 - fixed several issues in housekeeper (Alexei) 
 - changed properties of text files in SVN repository (Alexei)
 - removed text "Current node [N]" from node selector (Alexei)
 - removed duplicate index of table httptest (Alexei)
 - fixes for Oracle and SQLite schemas (Alexei)
 - improved main poller loop (Alexei) 
 - fixed int_in_list() function (Alexei)
 - fixed and improved log monitoring (Eugene)
 - fixed type of items.valuemapid (Alexei)
 - improved Standalone_Template (Alexei)
 - fixed PostgreSQL upgrade patch (Alexei)
 - added loop protection in selection of slave nodes (Alexei)
 - change delimiter for DM data transfers to 0xFF (Alexei)
 - better reporting of DM data transfers in log file (Alexei)
 - added better error reporting in zbx_malloc() (Alexei)