@@ -286,7 +286,8 @@ typedef enum
 	CONDITION_OPERATOR_NOT_LIKE,
 	CONDITION_OPERATOR_IN,
 	CONDITION_OPERATOR_MORE_EQUAL,
-	CONDITION_OPERATOR_LESS_EQUAL
+	CONDITION_OPERATOR_LESS_EQUAL,
+	CONDITION_OPERATOR_NOT_IN
 } zbx_condition_op_t;
 
 typedef enum
